fix alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -235,7 +235,7 @@ li{
 }
 
 #logo-container{
-  margin-left: 15%;
+  margin: 0px;
 }
 
 #navbar{
